app/media-server/navidrome/navidrome-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4533
  selector:
    app: navidrome
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
