app/media-server/navidrome/navidrome-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: navidrome
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: navidrome.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: navidrome
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - navidrome.home.adaminformatika.hu
    secretName: navidrome.home.adaminformatika.hu
